[gd_scene load_steps=6 format=2]

[ext_resource path="res://animation/sakerhets_levitate.tres" type="Animation" id=1]
[ext_resource path="res://imports/sakerhets.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/sakerhets.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "sakerhets_free"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 2.7, 2.7, 2.7 ), Vector3( 0.1, 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, -0.6, 0 ) ]
}

[sub_resource type="BoxShape" id=2]

[node name="sakerhets" type="Area"]
script = ExtResource( 3 )

[node name="sakerhets" type="MeshInstance" parent="."]
transform = Transform( 1.09017, -1.37059, 0.965925, 1.67303, 0.965928, -0.517639, -0.111771, 1.09017, 1.67303, 0.132008, 1, -0.0942909 )
mesh = ExtResource( 2 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="sakerhets"]
autoplay = "sakerhets_levitate"
anims/sakerhets_free = SubResource( 1 )
anims/sakerhets_levitate = ExtResource( 1 )

[node name="lightCollected" type="Timer" parent="."]
wait_time = 0.4

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.9, 0, 0, 0, 0.4, 0, 0.9, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_sakerhets_body_entered"]
[connection signal="timeout" from="lightCollected" to="." method="_on_lightCollected_timeout"]
